--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -2,5 +2,13 @@ body {
 	font-family: Helvetica,Arial,sans-serif;
 	font-size: 60px;
 	text-align: center;
+}
+
+a {
+	color:red;
+}
+
+
+span {
 	color:red;
 }
