--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -1,14 +1,70 @@
-body {
-	font-family: Helvetica,Arial,sans-serif;
-	font-size: 60px;
-	text-align: center;
+.tittle{
+	font-family:impact;
+	font-size:80px;
+	font-weight:bold;
+	text-align:center;
+	color:white;
+	animation:5s change infinite alternate;
 }
 
-a {
+@keyframes change{
+	0%{
+		color:white;
+
+	}
+	100%{
+		color:black;
+		text-shadow:0px 0px 5px white;
+
+	}
+
+}
+
+.name {
+	font-family:impact;
+	font-size:40px;
+	position:fixed;
+	bottom:10px;
+	right:10px;
 	color:red;
+	height:15px;
+	background-color:white;
 }
 
-
-span {
-	color:red;
+.name:hover{
+	background-color:red;
 }
+
+.col{
+	font-family:futura;
+	font-size:25px;
+	display:inline-block;
+	text-align:center;
+	padding-top:50px;
+	width:19%;
+}
+
+body{
+	background-color:black;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-radius:100%;
+  animation: 3s blu infinite alternate;
+}
+
+@keyframes blu {
+	0%{
+		filter:blur(2px);
+
+	}
+	100%{
+		filter:blur{10px);
+	}
+
+}
+
