--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -35,6 +35,14 @@
 	background-color:red;
 }
 
+.mada {
+	font-family:impact;
+	font-size:40px;
+	text-align:center;
+	color:white;
+	padding:50px;
+}
+
 .col{
 	font-family:futura;
 	font-size:25px;
@@ -42,6 +50,7 @@
 	text-align:center;
 	padding-top:50px;
 	width:19%;
+	font-weight:bold;
 }
 
 body{
@@ -65,6 +74,6 @@ img {
 	100%{
 		filter:blur{10px);
 	}
-
 }
+
 
