--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -11,6 +11,17 @@
 	position:fixed;
 }
 
+.info{
+	margin-left:30px;
+	margin-right:30px;
+	border:outset white 8px;
+	display:block;
+}
+
+.info:hover{
+	cursor:pointer;
+}
+
 a{
 	color:white;
 	text-decoration:none;
@@ -101,7 +112,6 @@ a:hover {
 	text-align:center;
 	padding:30px;
 	width:19%;
-	font-weight:bold;
 	justify-content:space-around;
 
 }
@@ -114,7 +124,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 33.33%;
   border-radius:100%;
   animation: 3s blu infinite alternate;
 }
