--- a/Moon/assets/css/main.css
+++ b/Moon/assets/css/main.css
@@ -8,6 +8,8 @@ body{
 	padding:10px;
 	position:fixed;
 	z-index:2;
+	left:0px;
+	top:0px;
 }
 
 .logo img{
@@ -20,6 +22,36 @@ body{
 }
 	
 
+.landing{
+	padding:20px;
+	background-color:white;
+	margin:auto;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-around;
+	width:100%;
+	background-color: white;
+
+}
+
+
+.read{
+	font-family:gill sans;
+	font-size:15px;
+}
+
+.heading{
+	font-family:Snell Roundhand, cursive;
+	font-size:40px;
+	font-weight:bolder;
+}
+.column{
+	width:49.9%;
+	display:flex;
+	padding:10px;
+	margin:auto;
+
+}
 /*nav starts*/
 
 .nav{
@@ -129,16 +161,43 @@ body{
 	font-size:12px;
 }
 
+.next{
+	font-size:18px;
+	position:fixed;
+	background-color:white;
+	color:black;
+	font-family:futura;
+	font-weight:bolder;
+	bottom:13%;
+	right:10px;
+	height:10px;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: white;
+}
 /*iphone*/
 @media(max-width: 550px){
 	.item{
 		width:100%;
 		font-size:18px;
-		padding:10px;
+		padding:0px;
+		text-align:center;
 	}
 
 	.footer{
 		font-weight:bold;
 	}
+
+	.column{
+		width:100%;
+	}
+
+.logo{
+	width:120px;
+	height:120px;
+	right:0px;
+	left:inherit;
+	top:0px;
+}
+
 
 }
