--- a/Moon/assets/css/main.css
+++ b/Moon/assets/css/main.css
@@ -19,6 +19,7 @@ body{
 .logo:hover {
 	filter:invert(100%);
 	cursor:pointer;
+	transition:2s;
 }
 	
 
@@ -30,7 +31,8 @@ body{
 	flex-wrap:wrap;
 	justify-content:space-around;
 	width:100%;
-	background-color: white;
+	background-color:white;
+	box-shadow:0px 5px 10px 10px white;
 
 }
 
@@ -51,6 +53,16 @@ body{
 	padding:10px;
 	margin:auto;
 
+}
+
+.move{
+	margin-top:-57%;
+	transition:2s;
+}
+
+.move1{
+	margin-top:-59%;
+	transition:2s;
 }
 /*nav starts*/
 
@@ -116,7 +128,8 @@ body{
 	padding:0px;
 	align-items:center;
 	font-family:futura;
-	font-size:18px;
+	font-size:15px;
+	text-align:center;
 
 }
 
@@ -184,7 +197,7 @@ body{
 	}
 
 	.footer{
-		font-weight:bold;
+		
 	}
 
 	.column{
@@ -199,5 +212,12 @@ body{
 	top:0px;
 }
 
-
+.move{
+	margin-top:-185%;
+	transition:2s;
+}
+.move1{
+	margin-top:-191%;
+	transition:2s;
+}
 }
