--- a/misinformation/assets/css/enron.css
+++ b/misinformation/assets/css/enron.css
@@ -24,7 +24,7 @@ body {
 
 /* intro paragraph */
 .info{
-  font-family:open sans;
+  font-family:roboto;
   font-size:14px;
   color:white;
   padding:80px;
@@ -146,7 +146,7 @@ text-shadow:0px 0px 5px 5px white;
   padding: 10px;
   background-color: black;
   color:white;
-  font-family:open sans;
+  font-family:roboto;
   font-size:14px;
   position: relative;
   border-radius: 0px;
