--- a/notabook/assets/css/main.css
+++ b/notabook/assets/css/main.css
@@ -42,6 +42,14 @@ p{
 	padding:25px;
 }
 
+.quote{
+	font-family:Chalkduster, fantasy;
+	font-size:25px;
+	padding:30px;
+	text-align:center;
+
+}
+
 .pic1{
 	width:100%;
 
