--- a/notabook/assets/css/article2.css
+++ b/notabook/assets/css/article2.css
@@ -117,7 +117,7 @@ p{
 	padding-left:20px;
 	padding-right:20px;
 	text-align:center;
-	background-color:orange;
+	background-color:brown;
 	visibility:hidden;
 
 }
@@ -216,7 +216,7 @@ img {
 	font-family:gillsans;
 	font-size:15px;
 	padding:10px;
-	background-color:orange;
+	background-color:brown;
 	visibility:hidden;
 }
 .pics.active{
