--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -1,9 +1,13 @@
+body{
+	background-color:white;
+}
+
 .tittle{
 	font-family:futura;
 	font-size:20px;
 	font-weight:bold;
 	text-align:left;
-	color:white;
+	color:black;
 	padding:30px;
 	background-color:red;
 	height:10px;
@@ -11,134 +15,40 @@
 	position:fixed;
 }
 
-.info{
-	margin-left:30px;
-	margin-right:30px;
-	border:outset white 8px;
-	display:block;
-	text-align:center;
+img{
+	max-width:100%;
+	height:auto;
 }
 
-.info:hover{
-	cursor:pointer;
+.cont{
+	display:block;
+	font-family:andale mono;
+	font-size:30px;
+}
+
+.left{
+	position:fixed;
+	width:49%;
+	height:100vw;
+	z-index:-2;
+	display:inline-block;
+}
+
+
+.right{
+	width:49%;
+	position:absolute;
+	display:inline-block;
+	right:0px;
+	padding:30px;
 }
 
 a{
-	color:white;
+	font-size:12px;
 	text-decoration:none;
-	font-family:futura;
-	font-size:20px;
-}
-
-a:hover {
 	color:black;
-	text-shadow:0px 0px 3px white;
 }
 
-
-.name {
-	font-family:impact;
-	font-size:40px;
-	position:fixed;
-	bottom:10px;
-	right:10px;
+a:hover{
 	color:red;
-	height:15px;
-	background-color:white;
 }
-
-.rectangle{
-	background-color:white;
-	height:10px;
-	top:300px;
-	text-align:center;
-	width:100%;
-	position:relative;
-	animation: 3s slide infinite alternate;
-	z-index:-2;
-
-}
-
-@keyframes slide{
-	0%{
-		transform:rotate(-30deg);
-
-	}
-	100%{
-		transform:rotate(30deg);
-
-	}
-}
-
-.rect{
-	background-color:white;
-	height:10px;
-	top:300px;
-	text-align:center;
-	width:100%;
-	position:relative;
-	z-index:-2;
-	animation: 3s slides infinite alternate;
-}
-
-@keyframes slides{
-	0%{
-		transform:rotate(20deg);
-
-	}
-	100%{
-		transform:rotate(-20deg);
-
-	}
-}
-
-
-.name:hover{
-	background-color:red;
-}
-
-.mada {
-	font-family:impact;
-	font-size:40px;
-	text-align:center;
-	color:white;
-	padding:80px;
-	text-shadow:0px 0px 3px black;
-}
-
-.col{
-	font-family:futura;
-	font-size:25px;
-	display:inline-flex;
-	text-align:center;
-	padding:30px;
-	width:19%;
-	justify-content:space-around;
-
-}
-
-body{
-	background-color:black;
-}
-
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 33.33%;
-  border-radius:100%;
-  animation: 3s blu infinite alternate;
-}
-
-@keyframes blu {
-	0%{
-		filter:blur(2px);
-
-	}
-	100%{
-		filter:blur{10px);
-	}
-}
-
-
-
