--- a/imagenet/assets/css/main.css
+++ b/imagenet/assets/css/main.css
@@ -27,7 +27,7 @@ body{
 	padding:20px;
 	background-color:white;
 	margin:auto;
-	display:flex;
+	display:absolute;
 	flex-wrap:wrap;
 	justify-content:space-around;
 	width:100%;
