--- a/misinformation/assets/css/enron.css
+++ b/misinformation/assets/css/enron.css
@@ -12,7 +12,7 @@ body {
   position:fixed;
   margin:12px;
   z-index:5;
-  width:250px;
+  width:300px;
   display:absolute;
   
 }
@@ -25,12 +25,17 @@ body {
 /* intro paragraph */
 .info{
   font-family:roboto;
-  font-size:14px;
+  font-size:1.5vw;
   color:white;
   padding:80px;
   text-align:left;
   animation:10s fade;
   background-color:black;
+  line-height:2vw;
+  word-spacing:2px;
+  width:100%;
+  display:relative;
+  justify-content:space-around;
 
 }
 
@@ -46,6 +51,19 @@ body {
 
 }
 
+.ofw{
+  display:inline-block;
+  width:48%;
+  padding:10px;
+
+}
+
+.tfw{
+  display:inline-block;
+  width:48%;
+  padding:10px;
+}
+
 /* graph*/
 .graph{
   width:100%;
@@ -54,6 +72,7 @@ body {
   width:100%;
   max-height:100vh;
 }
+
 
 /* start timeline */
 .start{
@@ -147,11 +166,10 @@ text-shadow:0px 0px 5px 5px white;
   background-color: black;
   color:white;
   font-family:roboto;
-  font-size:14px;
+  font-size:2vw;
   position: relative;
-  border-radius: 0px;
+  line-height:2.5vw;
 }
-
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
@@ -190,4 +208,44 @@ text-shadow:0px 0px 5px 5px white;
   font-weight:bolder;
   font-size:15px;
   padding-bottom:10px;
+}
+
+.au{
+  padding:30px;
+  height:200px;
+  width:48%;
+  text-align:center;
+  font-family:futura;
+  font-weight:bolder;
+  color:blue;
+  font-size:350px;
+  border:6px solid blue;
+  text-shadow:10px 10px white;
+}
+
+.tfw img{
+  width:100%;
+}
+
+.next{
+  font-family:futura;
+  font-weight:bolder;
+  color:blue;
+  text-align:center;
+  font-size:20px;
+}
+.next a{
+  color:blue;
+  text-decoration:none;
+}
+
+.next:hover{
+  opacity:50%;
+}
+
+
+.footer{
+  color:grey;
+  font-size:11px;
+  text-align:right;
 }
